app01/staging/srv_app01.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: app01
  labels:
    app.kubernetes.io/name: web-app
spec:
  selector:
    app.kubernetes.io/name: web-app
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
