app01/staging/ingress_app01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app01
spec:
  rules:
  - host: web-app.app01.svc.cluster.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-app
            port:
              number: 80
